--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -42,4 +42,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: mirajehossain/agilebd2023:latest
+          tags: sjsakib/scrum-dhaka:latest
